Fix vertical position of contacts menu on author row
The absolute position of the contacts menu is relative to the author
row, so it has to be pushed down to not overlap the author name and
avatar.

--- a/css/comments.scss
+++ b/css/comments.scss
@@ -150,6 +150,10 @@
 	width: 100%;
 }
 
+#commentsTabView .comment .authorRow .contactsmenu-popover {
+	top: 32px;
+}
+
 body:not(#body-public) #commentsTabView .comment .authorRow:not(.currentUser):not(.guestUser) {
 	.avatar,
 	.avatar img,
